# mcp-feedback-enhanced

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini  theme_test.html
.claude/: settings.local.json
.github/workflows/: publish.yml
RELEASE_NOTES/: README.md  template.md
docs/: DESKTOP_BUILD.md
docs/architecture/: component-details.md
scripts/: build_desktop.py  cleanup_cache.py  release.py  validate_message_codes.py  validate_workflows.py
src-tauri/: Cargo.toml  generate_icons.py  pyproject.toml
src-tauri/python/mcp_feedback_enhanced_desktop/: __init__.py  desktop_app.py
src-tauri/src/: lib.rs  main.rs
src/mcp_feedback_enhanced/: __init__.py  __main__.py  debug.py  i18n.py  server.py
src/mcp_feedback_enhanced/desktop_app/: desktop_app.py
src/mcp_feedback_enhanced/desktop_release/: __init__.py
src/mcp_feedback_enhanced/utils/: __init__.py  error_handler.py  memory_monitor.py  resource_manager.py
src/mcp_feedback_enhanced/web/: __init__.py  main.py
src/mcp_feedback_enhanced/web/constants/: __init__.py  message_codes.py
src/mcp_feedback_enhanced/web/locales/en/: translation.json
src/mcp_feedback_enhanced/web/locales/zh-CN/: translation.json
src/mcp_feedback_enhanced/web/locales/zh-TW/: translation.json
src/mcp_feedback_enhanced/web/models/: __init__.py  feedback_result.py  feedback_session.py
src/mcp_feedback_enhanced/web/routes/: __init__.py  main_routes.py
src/mcp_feedback_enhanced/web/static/: index.html
src/mcp_feedback_enhanced/web/static/css/: styles.css
src/mcp_feedback_enhanced/web/static/js/: i18n.js
src/mcp_feedback_enhanced/web/static/js/modules/: connection-monitor.js  settings-manager.js  ui-manager.js
src/mcp_feedback_enhanced/web/static/js/modules/audio/: audio-manager.js
src/mcp_feedback_enhanced/web/static/js/modules/constants/: message-codes.js
src/mcp_feedback_enhanced/web/static/js/modules/notification/: notification-manager.js
src/mcp_feedback_enhanced/web/templates/: feedback.html  index.html
src/mcp_feedback_enhanced/web/utils/: __init__.py  browser.py  port_manager.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/helpers/: __init__.py  manual_tooltip_test.html  mcp_client.py
tests/integration/: __init__.py
tests/unit/: __init__.py
