[package]
name = "mcp-feedback-enhanced-desktop"
version = "2.4.3"
edition = "2021"
rust-version = "1.70"
description = "Desktop application for MCP Feedback Enhanced using Tauri"
authors = ["Minidoracat <minidora0702@gmail.com>"]
license = "MIT"

# 设置 crate 类型为 cdylib，用于 Python 扩展
[lib]
name = "mcp_feedback_enhanced_desktop_lib"
crate-type = ["cdylib"]

# 二进制目标
[[bin]]
name = "mcp-feedback-enhanced-desktop"
path = "src/main.rs"

[dependencies]
# Tauri 核心依赖
tauri = { version = "2.2", features = ["custom-protocol"] }
tauri-plugin-shell = "2.2"

# PyO3 用于 Python 绑定
pyo3 = { version = "0.22", features = ["extension-module"] }

# 序列化支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 日志记录
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

# 开发配置文件
[profile.dev]
incremental = true
debug = true

# 发布配置文件
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

# 专用于打包的配置文件
[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
